// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/layout/EmojiSplash.tsx > should render itself & its children - heading and sub-heading 1`] = `
<div>
  <div
    class="flex flex-1 flex-col items-center justify-center min-h-screen"
  >
    <div
      class="css-1rd5nai"
    >
      <div
        class="css-1ma91a4"
      >
        <span
          class="text-5xl"
        >
          <span>
            <img
              alt="🍺"
              class="emoji"
              draggable="false"
              src="/mock/assets/images/1f37a.svg"
            />
          </span>
        </span>
        <span
          class="text-xl font-semibold"
        >
          Test Heading
        </span>
        <div
          class="css-u5wwvt"
        >
          <span
            class="text-center"
          >
            Test Sub-Heading
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/layout/EmojiSplash.tsx > should render itself & its children - heading only 1`] = `
<div>
  <div
    class="flex flex-1 flex-col items-center justify-center min-h-screen"
  >
    <div
      class="css-1rd5nai"
    >
      <div
        class="css-1ma91a4"
      >
        <span
          class="text-5xl"
        >
          <span>
            <img
              alt="🍺"
              class="emoji"
              draggable="false"
              src="/mock/assets/images/1f37a.svg"
            />
          </span>
        </span>
        <span
          class="text-xl font-semibold"
        >
          Test Heading
        </span>
      </div>
    </div>
  </div>
</div>
`;
